--- a/CrudApp/Views/Home/Index.cshtml
+++ b/CrudApp/Views/Home/Index.cshtml
@@ -23,9 +23,9 @@
 
                     <div class="intro-box">
 
-                        <h1 ng-cloak>Title</h1>
+                        <h1 ng-cloak>GeoArchive</h1>
 
-                        <h3>A Living Archive</h3>
+                        <h3>A Living Atlas</h3>
 
                         <a href="~/Home/Search" class="btn btn-lg btn-white-border">Search Archive</a>
 
