--- a/CrudApp/Content/Theme/style.css
+++ b/CrudApp/Content/Theme/style.css
@@ -76,14 +76,14 @@ a:hover,a:focu{s
 }
 .intro-box{
     padding: 30px;
-    background-color: rgba(255,255,255,0.25);
+    background-color: rgba(200,200,200,0.5);
     border: 10px solid rgba(0,0,0,0.25);
     text-align: center;
     margin-top: 200px;
     margin-bottom: 200px;
 }
 .intro-box h1{
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-weight: 700;
     color:#000;
     font-size: 60px;
@@ -91,6 +91,7 @@ a:hover,a:focu{s
     margin-bottom: 0px;
 }
 .intro-box h3{
+    font-family: "Lato", sans-serif;
     color:#0cbdaa;
     font-size: 60px;
     line-height: 65px;
