--- a/CrudApp/Views/Shared/_StormLayout1.cshtml
+++ b/CrudApp/Views/Shared/_StormLayout1.cshtml
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Mapp - A temporary thing</title>
+    <title>GeoArchive - A living Atlas</title>
     <!-- Bootstrap -->
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
 
@@ -46,7 +46,7 @@
 
                 </button>
 
-                <a class="navbar-brand" href="~/Home/Index">Mapp</a>
+                <a class="navbar-brand" href="~/Home/Index">G.A</a>
 
             </div>
 
