--- a/CrudApp/Views/Home/Contribute.cshtml
+++ b/CrudApp/Views/Home/Contribute.cshtml
@@ -33,10 +33,10 @@
                 <div class="lean-left-1">
                     <form ng-class="{'form-group':true, 'form-group-lg':true, 'has-error': !CrbC.validResource , 'has-success': CrbC.validResource}">
                         <label for="doctype-map">
-                            <input type="radio" id="doctype-map" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="map" ng-checked />Map 
+                            <input type="radio" id="doctype-map" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="map" ng-checked />Map
                         </label>
                         <label for="doctype-picture">
-                            <input type="radio" id="doctype-picture" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="picture" />Picture 
+                            <input type="radio" id="doctype-picture" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="picture" />Picture
                         </label>
                         <label for="doctype-video">
                             <input type="radio" id="doctype-video" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="video" disabled />Video
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </div>
-        <hr/>
+        <hr />
         <div class="row">
             <div id="placeholder" class="col-lg-8 col-md-8 col-sm-12 col-xs-12" ng-if="!CrbC.validResource">
                 <div id="container">
@@ -70,7 +70,7 @@
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" ng-if="CrbC.documentType == 'picture' && CrbC.validResource">
                 <div class="contribute-picture pading-left-1">
                     <button type="button" class="btn btn-info margin-bottom-1"><span class="fa fa-map-marker"></span> Plot on Map</button>
-                    <br/>
+                    <br />
                     <p class="text-muted">or</p>
                     <form id="formMarkerLatLng" class="form-group">
                         <label for="marker-lat">Latitude</label>
@@ -86,23 +86,49 @@
                 </div>
             </div>
             <!--ng-show="CrbC.documentType=='map' && CrbC.validResource"-->
-            <div id="map" class="map-display col-lg-8 col-md-8 col-sm-12 col-xs-12" ></div>
-            
+            <div id="map" class="map-display col-lg-8 col-md-8 col-sm-12 col-xs-12"></div>
+
             <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                 <h2>Document Details</h2>
-                <p>{{CrbC.documentDeatils.title}}</p>
-                <form class="form-group">
-                    <input class="form-control" ng-model="CrbC.documentDeatils.title" type="text" placeholder="*Document Title" />
-                    <br />
-                    <input class="form-control" type="text" placeholder="*Year (yyyy)" />
-                    <br />
-                    <input class="form-control" type="text" placeholder="*Your Name" />
-                    <br />
-                    <input class="form-control" type="text" placeholder="*Source Instuturion (eg. Library of Congress)" />
-                    <br />
-                    <textarea class="form-control" placeholder="*Give us an idea of what we're looking at." rows="5"></textarea>
-                    <br />
-                    <button class="btn btn-success" type="submit"><span class="fa fa-paper-plane-o"></span>  Submit Document</button>
+                
+                <form name="detailsForm" class="details-form" ng-submit="CrbC.submitForm(detailsForm.$valid)" novalidate disable>
+                    
+                    <!-- Title -->
+                    <div class="form-group" ng-class="{'has-error' : detailsForm.title.$invalid && !detailsForm.title.$pristine}">
+                        <input name="title" type="text" class="form-control" ng-model="CrbC.documentDeatils.title" placeholder="*Document Title" ng-disabled="!CrbC.validResource" required/>
+                        <p ng-show="detailsForm.title.$invalid && !detailsForm.title.$pristine" class="help-block">A title is required.</p>
+                    </div>
+                    
+                    <!-- Year -->
+                    <div class="form-group" ng-class="{'has-error' : detailsForm.year.$invalid && !detailsForm.year.$pristine}">
+                        <input name="year" class="form-control" type="number" ng-model="CrbC.documentDeatils.year" min="0" max="2015" placeholder="*Year (yyyy)" ng-disabled="!CrbC.validResource" required/>
+                        <p ng-show="detailsForm.year.$invalid && !detailsForm.year.$pristine && !detailsForm.year.$error.min && !detailsForm.year.$error.max" class="help-block">A year is required.</p>
+                        <p ng-show="detailsForm.year.$error.min" class="help-block">Your document must be for the Common Era (ie AD).</p>
+                        <p ng-show="detailsForm.year.$error.max" class="help-block">Your document seems a bit too modern.</p>
+                    </div>
+
+                    <!-- User Name -->
+                    <div class="form-group" ng-class="{'has-error' : detailsForm.contributor.$invalid && !detailsForm.contributor.$pristine}">
+                        <input name="contributor" class="form-control" type="text" ng-model="CrbC.documentDeatils.contributor" placeholder="*Your Name" ng-disabled="!CrbC.validResource" required/>
+                        <p ng-show="detailsForm.contributor.$invalid && !detailsForm.contributor.$pristine" class="help-block">Your name is required, even if it's just a nickname.</p>
+                    </div>
+
+                    <!-- Source -->
+                    <div class="form-group" ng-class="{'has-error' : detailsForm.sourceInstitution.$invalid && !detailsForm.sourceInstitution.$pristine}">
+                        <input name="sourceInstitution" class="form-control" type="text" ng-model="CrbC.documentDeatils.sourceInstitution" placeholder="*Source Instuturion (eg. Library of Congress)" ng-disabled="!CrbC.validResource" required/>
+                        <p ng-show="detailsForm.sourceInstitution.$invalid && !detailsForm.sourceInstitution.$pristine" class="help-block">A soururce name is required.</p>
+                    </div>
+
+                    <!-- Source Website-->
+                    <input name="institutionUrl" class="form-control" type="text" ng-model="CrbC.documentDeatils.institutionUrl" placeholder="Source Homepage (eg. https://www.loc.gov)" ng-disabled="!CrbC.validResource"/>
+                    <br/>
+
+                    <!-- Description -->
+                    <div class="form-group" ng-class="{'has-error' : detailsForm.description.$invalid && !detailsForm.description.$pristine}">
+                        <textarea name="description" class="form-control" ng-model="CrbC.documentDeatils.description" placeholder="*Give us an idea of what we're looking at." rows="5" ng-disabled="!CrbC.validResource" required></textarea>
+                        <p ng-show="detailsForm.description.$invalid && !detailsForm.description.$pristine" class="help-block">A description is required.</p>
+                    </div>
+                    <button class="btn btn-success" type="submit" ng-disabled="detailsForm.$invalid || !CrbC.validResource"><span class="fa fa-paper-plane-o"></span>  Submit Document</button>
                 </form>
             </div>
         </div>
