--- a/CrudApp/Views/Home/Contribute.cshtml
+++ b/CrudApp/Views/Home/Contribute.cshtml
@@ -33,6 +33,7 @@
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
                 <div class="lean-left-1">
                     <form ng-class="{'form-group':true, 'form-group-lg':true, 'has-error': !CrbC.validResource , 'has-success': CrbC.validResource}">
+                        <!-- Radio buttons -->
                         <label for="doctype-map">
                             <input type="radio" id="doctype-map" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="map" ng-checked />Map
                         </label>
@@ -42,6 +43,8 @@
                         <label for="doctype-video">
                             <input type="radio" id="doctype-video" name="doctype" class="form-control-inline" ng-model="CrbC.documentType" ng-change="CrbC.resetResource()" value="video" disabled />Video
                         </label>
+
+                        <!-- Resource URL -->
                         <input class="form-control form-control-lg" ng-Change="CrbC.displayResource()" ng-model="CrbC.resourceUrl" type="text" height="5" placeholder="Paste Image Url" />
                     </form>
                 </div>
@@ -53,7 +56,7 @@
 
         <!-- LatLng Input for for non-map media -->
         <div id="lan-lng-form" class="row" ng-if="!(CrbC.documentType == 'map') && CrbC.validResource">
-            <div class="contribute-picture pading-left-1">
+            <div class="contribute-picture lean-left-2">
                 <button type="button" class="btn btn-info margin-bottom-1"><span class="fa fa-map-marker"></span> Plot on Map</button>
                 <br />
                 <p class="text-muted">or</p>
@@ -182,34 +185,5 @@
 
     <script src="~/Scripts/App/Pages/Controllers/ContributeController.js"></script>
 
-    @*<script src="~/Scripts/services/project.services.Leaflet.js"></script>*@
-
-    @*<script>
-            project.page.startUp = function () {
-
-                // Get User's location
-                project.services.IP.getLocation(project.page.onGetLocationSuccess, project.page.onAjaxError);
-
-                $("body").find(".leaflet-image-layer").fadeOut();
-            };
-
-            // .....................................................................................
-            // If user location retrieved successfully
-            project.page.onGetLocationSuccess = function (locationObject) {
-                // Centers display map on recieved latLng coordinates
-                var latLng = {
-                    lat: locationObject.lat,
-                    lng: locationObject.lon
-                };
-
-                project.services.Leaflet.editMap(latLng);
-            }
-
-            // .....................................................................................
-
-            project.page.onAjaxError = function (data) {
-                console.log("An error occured: ", data);
-            }
-
-        </script>*@
+   
 }
