converted custom.css to compile from SASS file.

--- a/CrudApp/Views/Home/Detail.cshtml
+++ b/CrudApp/Views/Home/Detail.cshtml
@@ -56,7 +56,7 @@
                     }
 
 
-                    <h3 class="margin-bottom-1">Shared by <strong>@Model._Document.Author</strong></h3>
+                    <h3 class="margin-bottom-1">Shared by <strong>@Model._Document.Contributor</strong></h3>
 
                     <p>
                         @Model._Document.Description
