--- a/CrudApp/Views/Shared/_StormLayout1.cshtml
+++ b/CrudApp/Views/Shared/_StormLayout1.cshtml
@@ -14,7 +14,8 @@
     <link href="~/Content/Theme/flexslider.css" rel="stylesheet" />
     <link href="~/Content/Theme/animate.css" rel="stylesheet" />
     <link href="~/Content/Theme/style.css" rel="stylesheet" />
-    <link href="~/Content/Theme/custom.css" rel="stylesheet" />
+    @*<link href="~/Content/Theme/custom.css" rel="stylesheet" />*@
+    <link href="~/Content/CSS/custom.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
