--- a/CrudApp/Content/CSS/SASS/custom.scss
+++ b/CrudApp/Content/CSS/SASS/custom.scss
@@ -55,6 +55,15 @@ $map2-background: url('~/../../Theme/Images/pexels-england-map-photo-229949.jpeg
     background-color: #000;
 }
 
+.cursor-pointer{
+    cursor: pointer;
+}
+
+
+.clear-heading{
+    position: relative;
+    top: 7em;
+}
 /*End Utility*/
 /*Body*/
 body {
