--- a/CrudApp/Views/Shared/_StormLayout1.cshtml
+++ b/CrudApp/Views/Shared/_StormLayout1.cshtml
@@ -215,8 +215,8 @@
 
     <!-- Angular Document Service -->
     <script src="~/Scripts/App/Archive/Services/documentHttpService.js"></script>
-
-
+    <script src="~/Scripts/App/Archive/Services/mapHttpService.js"></script>
+    <script src="~/Scripts/App/Archive/Services/pictureHttpService.js"></script>
     <!-- ## Page Scripts ## -->
     @RenderSection("Scripts", false)
 </body>
